--- a/Translations/German/text-cityName-change.xml
+++ b/Translations/German/text-cityName-change.xml
@@ -333,7 +333,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_CITYNAME_ELEPHANTINE</zType>
-		<de-DE>Abu</de-DE>
+		<de-DE>Elephantine</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CITYNAME_ELLASAR</zType>
