--- a/Translations/German/text-effectPlayer-change.xml
+++ b/Translations/German/text-effectPlayer-change.xml
@@ -21,6 +21,10 @@
 		<de-DE>Meisterspion</de-DE>
 	</Entry>
 	<Entry>
+		<zType>TEXT_EFFECTPLAYER_COUNCIL_SPYMASTER_F</zType>
+		<de-DE>Meisterspionin</de-DE>
+	</Entry>
+	<Entry>
 		<zType>TEXT_EFFECTPLAYER_DIFFICULTY_ABLE</zType>
 		<de-DE>Tüchtig</de-DE>
 	</Entry>
