--- a/Translations/German/text-name-change.xml
+++ b/Translations/German/text-name-change.xml
@@ -1051,7 +1051,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_NAME_NEOPTLEMUS</zType>
-		<de-DE>Neoptlemus</de-DE>
+		<de-DE>Neoptolemus</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_NAME_NICIAS</zType>
@@ -1783,7 +1783,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_NAME_DIVITIACOS</zType>
-		<de-DE>Divitiacos</de-DE>
+		<de-DE>Divitiacus</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_NAME_DUMNORIX</zType>
@@ -2275,7 +2275,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_NAME_RHAISCUS</zType>
-		<de-DE>Rhaiscus</de-DE>
+		<de-DE>Rhascus</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_NAME_RHESCUPORIS</zType>
