--- a/Translations/German/text-nation-change.xml
+++ b/Translations/German/text-nation-change.xml
@@ -55,6 +55,14 @@
 		<de-DE>Persien~Persische~eine Perserin~Perserinnen</de-DE>
 	</Entry>
 	<Entry>
+		<zType>TEXT_NATION_PHOENICIA</zType>
+		<de-DE>Phönizien~Phönizische~ein Phönizier~Phönizier</de-DE>
+	</Entry>
+	<Entry>
+		<zType>TEXT_NATION_PHOENICIA_F</zType>
+		<de-DE>Phönizien~Phönizische~eine Phönizierin~Phönizierinnen</de-DE>
+	</Entry>
+	<Entry>
 		<zType>TEXT_NATION_ROME</zType>
 		<de-DE>Rom~Römische~ein Römer~Römer</de-DE>
 	</Entry>
